--- a/DocumentManagementSystem/Views/Shared/Error.cshtml
+++ b/DocumentManagementSystem/Views/Shared/Error.cshtml
@@ -3,6 +3,9 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<div class="container">
+    <h1 class="text-danger">@ViewBag.ErrorTitle</h1>
+    <h2 class="text-danger">@ViewBag.ErrorMessage</h2>
 
+
+</div>
