--- a/DocumentManagementSystem/Views/Account/SignUp.cshtml
+++ b/DocumentManagementSystem/Views/Account/SignUp.cshtml
@@ -17,7 +17,7 @@
 </style>
 <div class="row ">
     <div class="col-md-12 d-flex justify-content-center">
-        <div class="col-sm-4 mt-4 box-shadow-me card">
+        <div class="col-sm-4 mt-4 box-shadow-me card p-3">
             <h4 class="text-center text-primary mt-1"> Sign Up</h4>
             <p class="form-text text-center text-muted">We'll never share your details with anyone else.</p>
             <form method="post">
