--- a/DocumentManagementSystem/Views/Account/SignIn.cshtml
+++ b/DocumentManagementSystem/Views/Account/SignIn.cshtml
@@ -17,8 +17,8 @@
 <div class="row" >
     <div class="col-md-12 col-sm-12 d-flex justify-content-center ">
         <div class="col-md-3 col-sm-3 ">
-            <div class=" p-3 mt-5 box-shadow-me card" >
-                <h3 class="text-center text-primary">Sign In</h3>
+            <div class=" p-3 mt-5 box-shadow-me card p-3" >
+                <h3 class="text-center text-primary mt-1">Sign In</h3>
                 <h6 class="text-center text-c-lite-green">Document Management System</h6>
                 <form method="post">
                     <div asp-validation-summary="All" class="text-danger"></div>
