--- a/DocumentManagementSystem/Views/Shared/Error.cshtml
+++ b/DocumentManagementSystem/Views/Shared/Error.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Error";
 }
 
-<div class="container">
+<div class="container mt-3">
     <h1 class="text-danger">@ViewBag.ErrorTitle</h1>
     <h2 class="text-danger">@ViewBag.ErrorMessage</h2>
 
