--- a/DocumentManagementSystem/Views/Pdf/Index.cshtml
+++ b/DocumentManagementSystem/Views/Pdf/Index.cshtml
@@ -13,7 +13,7 @@
 
 <div class="card p-3">
     <h4 class="h5 text-primary">Create Your Document</h4>
-    <form method="post" formaction="">
+    <form method="post" formaction="/">
         <div class="col-sm-10">
             <div class="form-group">
                 <label>Document Orientation</label>
