--- a/DocumentManagementSystem/Views/Pdf/Index.cshtml
+++ b/DocumentManagementSystem/Views/Pdf/Index.cshtml
@@ -14,6 +14,7 @@
 <div class="card p-3">
     <h4 class="h5 text-primary">Create Your Document</h4>
     <form method="post" asp-controller="pdf" asp-action="index">
+        @Html.AntiForgeryToken()
         <div class="col-sm-10">
             <div class="form-group">
                 <label>Document Orientation</label>
@@ -28,7 +29,7 @@
                 <span asp-validation-for="Message" class="text-danger"></span>
             </div>
             @*<button type="submit" class="btn btn-primary btn-sm" >Preview & Print</button>*@
-            <button type="submit" class="btn btn-success btn-sm" >Download</button>
+            <button type="submit" class="btn btn-success btn-sm">Download</button>
         </div>
     </form>
 </div>
