--- a/DocumentManagementSystem/Views/Pdf/Index.cshtml
+++ b/DocumentManagementSystem/Views/Pdf/Index.cshtml
@@ -13,8 +13,8 @@
 
 <div class="card p-3">
     <h4 class="h5 text-primary">Create Your Document</h4>
-    <form method="post" asp-controller="pdf" asp-action="index">
-        @Html.AntiForgeryToken()
+    <form method="post" formaction="">
+        
         <div class="col-sm-10">
             <div class="form-group">
                 <label>Document Orientation</label>
@@ -28,8 +28,8 @@
                 <textarea asp-for="Message" id="mytextarea" rows="18"></textarea>
                 <span asp-validation-for="Message" class="text-danger"></span>
             </div>
-            @*<button type="submit" class="btn btn-primary btn-sm" >Preview & Print</button>*@
-            <button type="submit" class="btn btn-success btn-sm">Download</button>
+            <button type="submit" class="btn btn-primary btn-sm" formaction="Print">Preview & Print</button>
+            <button type="submit" class="btn btn-success btn-sm" formaction="index">Download</button>
         </div>
     </form>
 </div>
