add doc list link

--- a/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
+++ b/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
@@ -253,6 +253,13 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a asp-controller="document" asp-action="documents">
+                                        <span class="pcoded-micon"><i class="ti-file"></i><b>DL</b></span>
+                                        <span class="pcoded-mtext" data-i18n="nav.form-components.main">Documents List</span>
+                                        <span class="pcoded-mcaret"></span>
+                                    </a>
+                                </li>
+                                <li>
                                     <a asp-controller="document" asp-action="deptdocument">
                                         <span class="pcoded-micon"><i class="ti-file"></i><b>MD</b></span>
                                         <span class="pcoded-mtext" data-i18n="nav.form-components.main">My Department</span>
@@ -267,12 +274,12 @@
                                     </a>
                                 </li>
                                 @*<li>
-                                    <a asp-controller="pdf" asp-action="index">
-                                        <span class="pcoded-micon"><i class="ti-new-window"></i><b>UD</b></span>
-                                        <span class="pcoded-mtext" data-i18n="nav.form-components.main">Create Document</span>
-                                        <span class="pcoded-mcaret"></span>
-                                    </a>
-                                </li>*@
+            <a asp-controller="pdf" asp-action="index">
+                <span class="pcoded-micon"><i class="ti-new-window"></i><b>UD</b></span>
+                <span class="pcoded-mtext" data-i18n="nav.form-components.main">Create Document</span>
+                <span class="pcoded-mcaret"></span>
+            </a>
+        </li>*@
                                 <li class="pcoded-hasmenu">
                                     <a href="javascript:void(0)">
                                         <span class="pcoded-micon"><i class="ti-layout-grid2-alt"></i></span>
